# XFontRenamer

./: .gitignore  AppDelegate.h  AppDelegate.m  CMakeLists.txt  FontRenamer.h  FontRenamer.m  Info.plist  MainView.h  MainView.m  MainViewController.h  MainViewController.m  MainWindow.h  MainWindow.m  Makefile  Readme.md  XFontRenamer.entitlements  main.m
AppSandboxFileAccess/: AppSandboxFileAccess.h  AppSandboxFileAccess.m  AppSandboxFileAccessOpenSavePanelDelegate.h  AppSandboxFileAccessOpenSavePanelDelegate.m  AppSandboxFileAccessPersist.m
